<resources>
    <string name="app_name">My Pharma</string>
    <string name="createAccount">Créer un compte</string>
    <string name="signin">Se connecter</string>
    <string name="guest">Visiteur</string>
    <string name="google_maps_key"
            templateMergeStrategy="preserve" translatable="false">AIzaSyC7_eWlDFhU_wCF1msP4SXl4Emj-mbNtEg
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Suivant</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="password">Mot de passe</string>
    <string name="family_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="NSS">NSS</string>
    <string name="Address">Adresse</string>
    <string name="Pharmacies">Pharmacies</string>
    <string name="Commandes">Commandes</string>
    <string name="compte">Compte</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="upload">télécharger</string>
    <string name="logout">Se déconnecter</string>
    <string name="nearest">Les pharmacies les plus proches</string>
    <string name="title_activity_test">testActivity</string>
    <string name="send">envoyer</string>
    <string name="msg_token_fmt"/>

</resources>
