<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Views.signupFragment" android:id="@+id/frameLayout2">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="50dp" android:layout_marginEnd="50dp"
    >

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/family_name"
                app:endIconMode="custom" android:background="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/nom"

                    android:layout_height="wrap_content" android:background="@color/white"
                    android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:background="@color/white"

        >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/prenom"
                    android:background="@color/white"

                    android:layout_height="wrap_content" android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:background="@color/white"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:background="@color/white"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:inputType="number|phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@color/white"
                android:hint="@string/NSS"
        >


            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/user_nss"
                    android:background="@color/white"

                    android:layout_height="wrap_content" android:inputType="number"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/Address"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:background="@color/white"

                    android:id="@+id/adress"

                    android:layout_height="wrap_content" android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup"

                android:text="@string/createAccount" app:cornerRadius="50dp" android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>