<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".Views.LoginFragment" android:id="@+id/frameLayout3">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.32">
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                app:endIconMode="custom" android:background="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/user_nss"
                    android:inputType="phone"

                    android:layout_height="wrap_content" android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                android:background="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/password"
                    android:inputType="textPassword"

                    android:layout_height="wrap_content" android:background="@color/white"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
                android:text="@string/signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/connect"
                app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.31" android:background="@drawable/btn_rounded"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                style="@style/Widget.MaterialComponents.Button" android:layout_marginBottom="16dp"
                android:layout_marginTop="32dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>